--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -9,6 +9,7 @@
   }
 
   body {
+    overflow: hidden;
     margin: 0;
     font-family: 'Segoe UI', 'Roboto', 'Oxygen';
     -webkit-font-smoothing: antialiased;
@@ -31,10 +32,29 @@
     font-size: 1.6rem;
   }
 
+  button, input[type="submit"], input[type="reset"] {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+  }
+
   .app {
     position: relative;
     min-height: 100vh;
   }
+
+  .icon {
+    display: inline-block;
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   .content-wrapper {
     width: 100%;
     max-width: 1120px;
