Desafio Contador con botón

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -17,6 +17,7 @@
             font-size: 4rem;
             color: white;
             font-weight: bold;
+            margin-bottom: 20px;
         }
     }
 }
