--- a/src/styles/_itemCount.scss
+++ b/src/styles/_itemCount.scss
@@ -26,5 +26,10 @@
     .add-to-cart {
         font-size: 1.6rem;
         grid-area: 2/1/3/4;
+
+        &:disabled {
+            color: #ccc;
+            pointer-events: none;
+        }
     }
 }
