--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -32,6 +32,15 @@
     font-size: 1.6rem;
   }
 
+  ul {
+    margin: 0;
+    padding: 0;
+
+    li {
+      list-style: none;
+    }
+  }
+
   button, input[type="submit"], input[type="reset"] {
     background: none;
     color: inherit;
