--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,11 +1,11 @@
 .main {
-    
-    margin-top: 40px;
 
     .item-list-container {
+        color: white;
         position: relative;
-        margin-top: 40px;
-        display: grid;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background: #000;
         .title {
             margin-bottom: 40px;
         }
@@ -33,7 +33,7 @@
                 height: 100%;
 
                 &:hover {
-                    color: $purpleColor;
+                    color: $greenColor;
                 }
             }
 
